--- a/AutoLogin-src/src/view/Index.form
+++ b/AutoLogin-src/src/view/Index.form
@@ -248,11 +248,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Stop Service"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnStopActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnHide">
       <Properties>
         <Property name="text" type="java.lang.String" value="Hide Window"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnHideActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnCancel">
       <Properties>
